--- a/js/packages/candy-machine-ui/.env.example
+++ b/js/packages/candy-machine-ui/.env.example
@@ -1,5 +1,4 @@
-REACT_APP_CANDY_MACHINE_ID=<YOUR CANDY MACHINE PROGRAM ID>
-
-REACT_APP_SOLANA_NETWORK=devnet
-REACT_APP_SOLANA_RPC_HOST=https://metaplex.devnet.rpcpool.com/
+REACT_APP_CANDY_MACHINE_ID=7mbyEGfcsomVmLgq9jRqVrPzVspuJqsQaoS2MSurhYDE
+REACT_APP_SOLANA_NETWORK=mainnet-beta
+REACT_APP_SOLANA_RPC_HOST=https://ssc-dao.genesysgo.net/
 SKIP_PREFLIGHT_CHECK=true
